appId: com.fuelgood.ios
---
- tapOn: "you@example.com"
- inputText: "newtester0418x@example.com"
- tapOn: "Enter password"
- inputText: "TestPass12345!"
- tapOn: "Password"
- waitForAnimationToEnd:
    timeout: 500
- tapOn: "Sign In"
- waitForAnimationToEnd:
    timeout: 10000
